fix: change spacing for card descriptions

--- a/blocks/place/__description/place__description.css
+++ b/blocks/place/__description/place__description.css
@@ -2,6 +2,6 @@
   display: flex;
   justify-content: space-between;
   align-items: baseline;
-  padding: 25px 20px 25px 21px;
+  padding: 28px 20px 22px 21px;
   background-color: #fff;
 }
